unpackaged/main/default/objects/Segmentation__c/Segmentation__c.object-meta.xml
<CustomObject>
    <label>Segmentation</label>
    <nameField>
        <displayFormat>Segmentation N°{0000}</displayFormat>
        <label>Nom de Segmentation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segmentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>