unpackaged/main/default/objects/Segmentation__c/fields/BusinessLine__c.field-meta.xml
<CustomField>
    <fullName>BusinessLine__c</fullName>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessLine</valueSetName>
    </valueSet>
</CustomField>