unpackaged/main/default/objects/Segmentation__c/fields/CodeNACE__c.field-meta.xml
<CustomField>
    <fullName>CodeNACE__c</fullName>
    <label>Code NACE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>