unpackaged/main/default/objects/Segmentation__c/fields/Notation__c.field-meta.xml
<CustomField>
    <fullName>Notation__c</fullName>
    <label>Notation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>