unpackaged/main/default/objects/Segmentation__c/fields/NotationPotentielExtension__c.field-meta.xml
<CustomField>
    <fullName>NotationPotentielExtension__c</fullName>
    <label>Notation de Potentiel d&#39;Extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>