unpackaged/main/default/objects/Segmentation__c/recordTypes/NoteCodesNACE.recordType-meta.xml
<RecordType>
    <fullName>NoteCodesNACE</fullName>
    <active>true</active>
    <label>Note des Codes NACE</label>
</RecordType>