unpackaged/main/default/objects/Segmentation__c/recordTypes/PoidsCASecteur.recordType-meta.xml
<RecordType>
    <fullName>PoidsCASecteur</fullName>
    <active>true</active>
    <label>Poids du CA secteur</label>
</RecordType>