unpackaged/main/default/objects/Segmentation__c/recordTypes/PotentielExtension.recordType-meta.xml
<RecordType>
    <fullName>PotentielExtension</fullName>
    <active>true</active>
    <label>Potentiel d’extension</label>
</RecordType>