unpackaged/main/default/objects/Segmentation__c/recordTypes/TrancheEffectif.recordType-meta.xml
<RecordType>
    <fullName>TrancheEffectif</fullName>
    <active>true</active>
    <label>Tranche d’effectif</label>
</RecordType>