unpackaged/main/default/objects/Segmentation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BusinessLine__c</columns>
    <columns>CodeNACE__c</columns>
    <columns>NotationPotentielExtension__c</columns>
    <columns>Notation__c</columns>
    <columns>TrancheBasse__c</columns>
    <columns>TrancheHaute__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>