unpackaged/main/default/objects/Segmentation__c/listViews/NoteCodesNACE.listView-meta.xml
<ListView>
    <fullName>NoteCodesNACE</fullName>
    <columns>NAME</columns>
    <columns>BusinessLine__c</columns>
    <columns>CodeNACE__c</columns>
    <columns>Notation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeNACE__c</field>
        <operation>equals</operation>
        <value>8532</value>
    </filters>
    <label>Note des Codes NACE</label>
</ListView>