unpackaged/main/default/objects/Segmentation__c/listViews/PoidsCASecteur.listView-meta.xml
<ListView>
    <fullName>PoidsCASecteur</fullName>
    <columns>NAME</columns>
    <columns>Notation__c</columns>
    <columns>NotationPotentielExtension__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Segmentation__c.NoteCodesNACE</value>
    </filters>
    <label>Poids du CA Secteur</label>
</ListView>