unpackaged/main/default/objects/Segmentation__c/listViews/PotentielExtension.listView-meta.xml
<ListView>
    <fullName>PotentielExtension</fullName>
    <columns>NAME</columns>
    <columns>CodeNACE__c</columns>
    <columns>BusinessLine__c</columns>
    <columns>Notation__c</columns>
    <columns>NotationPotentielExtension__c</columns>
    <columns>TrancheBasse__c</columns>
    <columns>TrancheHaute__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Segmentation__c.PotentielExtension</value>
    </filters>
    <label>Potentiel d&#39;extension</label>
</ListView>