unpackaged/main/default/objects/Segmentation__c/listViews/TrancheEffectif.listView-meta.xml
<ListView>
    <fullName>TrancheEffectif</fullName>
    <columns>NAME</columns>
    <columns>BusinessLine__c</columns>
    <columns>CodeNACE__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tranche d&#39;effectif</label>
</ListView>